[package]
name = "sshmutiplexer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0"
env_logger = "0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
clap = { version = "4", features = ["derive"] }
tls-parser = "0"